--- a/Game_SDK_Project_1.0.1/res/values/strings.xml
+++ b/Game_SDK_Project_1.0.1/res/values/strings.xml
@@ -81,7 +81,7 @@
     <string name="tips_75">《萌创天成用户协议》</string>
     <string name="tips_76">注册并进入游戏</string>
     <string name="tips_77">\u3000\u3000游客模式无法进行充值操作，为减少您在后续游戏过程中受到损失,避免后续游客模式可能无法登录游戏的情况,请尽快升级成萌创账号,保证自身权益。</string>
-    <string name="tips_78">手机号,6-25位字母+数字组合</string>
+    <string name="tips_78">手机号或6-25位字母+数字组合</string>
     <string name="tips_79">请输入手机号或者萌创账号</string>
     <string name="tips_80">快速注册</string>
     <string name="tips_81">请再次输入密码</string>
