修改了判断顺序

--- a/Game_SDK_Project_1.0.1/res/values/strings.xml
+++ b/Game_SDK_Project_1.0.1/res/values/strings.xml
@@ -6,9 +6,9 @@
     <string name="hello_world">Hello world!</string>
     <string name="tips_1">账号必须以字母开头</string>
     <string name="tips_2">账号不能为空</string>
-    <string name="tips_3">玩家账号只能含有数字、字母或一些特殊符号,大小在6-16位字符</string>
-    <string name="tips_4">账号长度必须在6~16位</string>
-    <string name="tips_5">密码长度必须在6~16位</string>
+    <string name="tips_3">玩家账号只能含有数字、字母或一些特殊符号,大小在6-25位字符</string>
+    <string name="tips_4">账号长度必须在6~25位</string>
+    <string name="tips_5">密码长度必须在6~20位</string>
     <string name="tips_6">修改密码中,请稍等...</string>
     <string name="tips_7">旧密码不能为空</string>
     <string name="tips_8">密码不能为空</string>
@@ -102,5 +102,6 @@
     <string name="tips_96">账号验证</string>
     <string name="tips_97">通过邮箱找回</string>
     <string name="tips_98">升级手机号通行证，需要进行验证</string>
+    <string name="tips_100">手机号码或账号不能为空</string>
 
 </resources>
